--- a/package.json
+++ b/package.json
@@ -3,11 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
-    "react-redux": "^7.1.1",
-    "react-scripts": "3.1.2",
-    "redux": "^4.0.4"
+    "@material-ui/core": "^4.11.4",
+    "@material-ui/icons": "^4.11.2",
+    "axios": "^0.21.1",
+    "dotenv": "^4.0.0",
+    "json-server": "^0.16.3",
+    "react": "^16.13.1",
+    "react-chartjs-2": "^3.0.3",
+    "react-charts": "*",
+    "react-dom": "^16.13.1",
+    "react-minimal-pie-chart": "^8.2.0",
+    "react-redux": "^7.2.4",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "^1.1.4",
+    "redux": "^4.1.0",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
