--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
   "dependencies": {
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
+    "@react-google-maps/api": "^2.2.0",
     "axios": "^0.21.1",
+    "cors": "^2.8.5",
     "dotenv": "^4.0.0",
     "json-server": "^0.16.3",
+    "passport": "^0.4.1",
     "react": "^16.13.1",
     "react-chartjs-2": "^3.0.3",
     "react-charts": "*",
@@ -17,13 +20,15 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "^1.1.4",
     "redux": "^4.1.0",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "request": "^2.88.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "server": "node server.js"
   },
   "eslintConfig": {
     "extends": "react-app"
